<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/albumArtImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/app_name"
        android:src="@android:drawable/sym_def_app_icon"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/songTitleTextView" />

    <TextView
        android:id="@+id/songTitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/song_title_placeholder"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/textColorPrimary"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toTopOf="@+id/artistNameTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/artistNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/artist_name_placeholder"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/textColorSecondary"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toTopOf="@+id/playbackSeekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <SeekBar
        android:id="@+id/playbackSeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/currentTimeTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/currentTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/time_placeholder"
        android:textColor="@color/textColorSecondary"
        app:layout_constraintBottom_toTopOf="@+id/playPauseButton"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/totalDurationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/time_placeholder"
        android:textColor="@color/textColorSecondary"
        app:layout_constraintBottom_toTopOf="@+id/playPauseButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/playPauseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/app_name"
        android:src="@android:drawable/ic_media_play"
        android:tint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/app_name"
        android:src="@android:drawable/ic_media_next"
        android:tint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@+id/playPauseButton"
        app:layout_constraintStart_toEndOf="@+id/playPauseButton"
        app:layout_constraintTop_toTopOf="@+id/playPauseButton" />

    <ImageButton
        android:id="@+id/previousButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/app_name"
        android:src="@android:drawable/ic_media_previous"
        android:tint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@+id/playPauseButton"
        app:layout_constraintEnd_toStartOf="@+id/playPauseButton"
        app:layout_constraintTop_toTopOf="@+id/playPauseButton" />

    <ImageButton
        android:id="@+id/shuffleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/app_name"
        android:src="@android:drawable/ic_menu_rotate"
        android:tint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@+id/previousButton"
        app:layout_constraintEnd_toStartOf="@+id/previousButton"
        app:layout_constraintTop_toTopOf="@+id/previousButton" />

    <ImageButton
        android:id="@+id/repeatButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/app_name"
        android:src="@android:drawable/ic_menu_revert"
        android:tint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@+id/nextButton"
        app:layout_constraintStart_toEndOf="@+id/nextButton"
        app:layout_constraintTop_toTopOf="@+id/nextButton" />

    <Button
        android:id="@+id/navigateToSearchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Search Online"
        app:layout_constraintBottom_toTopOf="@+id/albumArtImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/navigateToLibraryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Open Library"
        app:layout_constraintTop_toBottomOf="@id/navigateToSearchButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/teal_200"
        android:textColor="@color/black"/>

</androidx.constraintlayout.widget.ConstraintLayout>
